fixed the scrollbar vh problem

--- a/Skeleton-Client/src/App.css
+++ b/Skeleton-Client/src/App.css
@@ -130,3 +130,7 @@
   justify-content: center;
   padding: 10px;
 }
+
+.input-button{
+  width: 100px;
+}
